[gd_scene load_steps=9 format=3 uid="uid://b6gonom0s5k1n"]

[ext_resource type="Material" uid="uid://dmfwkx1hhpd5x" path="res://resources/SimpleBlurMaterial.tres" id="1_olkne"]
[ext_resource type="Theme" uid="uid://cntfsyilhn2ic" path="res://resources/NoFocusColor.tres" id="1_r47on"]
[ext_resource type="Script" uid="uid://86h6yxdj6auo" path="res://src/SettingsMenu.gd" id="3_rvg0e"]
[ext_resource type="Theme" uid="uid://kqiya8o4sqm7" path="res://resources/Margins.tres" id="4_fiwkk"]
[ext_resource type="LabelSettings" uid="uid://cge013srcxvfk" path="res://resources/SectionHeadings.tres" id="6_ea76q"]
[ext_resource type="Script" uid="uid://ckqgnvpbftev7" path="res://src/gui/PropertySaveLoad.gd" id="6_p6jor"]
[ext_resource type="Script" uid="uid://cuih47milvqcs" path="res://src/gui/SectionHeading.gd" id="8_eb8rq"]
[ext_resource type="Script" uid="uid://dr8ohqjw3p58t" path="res://src/gui/Property.gd" id="11_06nbq"]

[node name="SettingsMenu" type="TabContainer"]
texture_filter = 4
material = ExtResource("1_olkne")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_r47on")
current_tab = 0
script = ExtResource("3_rvg0e")
metadata/_edit_group_ = true

[node name="Graphics" type="ScrollContainer" parent="."]
layout_mode = 2
focus_mode = 1
theme = ExtResource("1_r47on")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Graphics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_fiwkk")

[node name="VBoxContainer" type="VBoxContainer" parent="Graphics/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Framerate" type="VBoxContainer" parent="Graphics/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
script = ExtResource("8_eb8rq")
label_settings = ExtResource("6_ea76q")
label_alignment = 1

[node name="Max FPS" type="HBoxContainer" parent="Graphics/MarginContainer/VBoxContainer/Framerate"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
step = 1.0
rounded = true
or_greater = true
suffix = "fps"
default_float = 60.0
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="SaveLoadConfigValue" type="Node" parent="Graphics/MarginContainer/VBoxContainer/Framerate/Max FPS"]
script = ExtResource("6_p6jor")
config_property = &"max_fps"

[node name="VSync" type="HBoxContainer" parent="Graphics/MarginContainer/VBoxContainer/Framerate"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 6
step = 1.0
rounded = true
or_greater = true
suffix = "fps"
enum_fields = PackedStringArray("Disabled", "Enabled", "Adaptive", "Mailbox")
default_float = 60.0
default_enum_idx = 1
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="SaveLoadConfigValue" type="Node" parent="Graphics/MarginContainer/VBoxContainer/Framerate/VSync"]
script = ExtResource("6_p6jor")
config_property = &"vsync"

[node name="Window" type="VBoxContainer" parent="Graphics/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
script = ExtResource("8_eb8rq")
label_settings = ExtResource("6_ea76q")
label_alignment = 1

[node name="Window Mode" type="HBoxContainer" parent="Graphics/MarginContainer/VBoxContainer/Window"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 6
enum_fields = PackedStringArray("Windowed", "Borderless Fullscreen", "Exclusive Fullscreen")
default_enum_idx = 1
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="SaveLoadConfigValue" type="Node" parent="Graphics/MarginContainer/VBoxContainer/Window/Window Mode"]
script = ExtResource("6_p6jor")
config_property = &"window_mode"

[node name="Audio" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
focus_mode = 1
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Audio"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_fiwkk")

[node name="VBoxContainer" type="VBoxContainer" parent="Audio/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Volume" type="VBoxContainer" parent="Audio/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
script = ExtResource("8_eb8rq")
label_settings = ExtResource("6_ea76q")
label_alignment = 1

[node name="Master" type="HBoxContainer" parent="Audio/MarginContainer/VBoxContainer/Volume"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 1
slider_width = 256.0
default_float = 1.0
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="SaveLoadConfigValue" type="Node" parent="Audio/MarginContainer/VBoxContainer/Volume/Master"]
script = ExtResource("6_p6jor")
config_property = &"master_audio_level"

[node name="Music" type="HBoxContainer" parent="Audio/MarginContainer/VBoxContainer/Volume"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 1
slider_width = 256.0
default_float = 1.0
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="SaveLoadConfigValue" type="Node" parent="Audio/MarginContainer/VBoxContainer/Volume/Music"]
script = ExtResource("6_p6jor")
config_property = &"music_audio_level"

[node name="Game SFX" type="HBoxContainer" parent="Audio/MarginContainer/VBoxContainer/Volume"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 1
slider_width = 256.0
default_float = 1.0
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="SaveLoadConfigValue" type="Node" parent="Audio/MarginContainer/VBoxContainer/Volume/Game SFX"]
script = ExtResource("6_p6jor")
config_property = &"game_sfx_audio_level"

[node name="Level SFX" type="HBoxContainer" parent="Audio/MarginContainer/VBoxContainer/Volume"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 1
slider_width = 256.0
default_float = 1.0
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="SaveLoadConfigValue" type="Node" parent="Audio/MarginContainer/VBoxContainer/Volume/Level SFX"]
script = ExtResource("6_p6jor")
config_property = &"in_level_sfx_audio_level"

[node name="Editor" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
focus_mode = 1
theme = ExtResource("1_r47on")
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="Editor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_fiwkk")

[node name="VBoxContainer" type="VBoxContainer" parent="Editor/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Colors" type="VBoxContainer" parent="Editor/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
focus_mode = 1
script = ExtResource("8_eb8rq")
label_settings = ExtResource("6_ea76q")
label_alignment = 1

[node name="Selection zone" type="VBoxContainer" parent="Editor/MarginContainer/VBoxContainer/Colors"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
script = ExtResource("8_eb8rq")
label_settings = ExtResource("6_ea76q")

[node name="Color" type="HBoxContainer" parent="Editor/MarginContainer/VBoxContainer/Colors/Selection zone"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 5
default_color = Color(0, 1, 0, 1)
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="PropertySaveLoad" type="Node" parent="Editor/MarginContainer/VBoxContainer/Colors/Selection zone/Color"]
script = ExtResource("6_p6jor")
config_property = &"selection_zone_color"

[node name="Alpha" type="HBoxContainer" parent="Editor/MarginContainer/VBoxContainer/Colors/Selection zone"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
default_float = 0.2
default_color = Color(0, 1, 0, 1)
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="PropertySaveLoad" type="Node" parent="Editor/MarginContainer/VBoxContainer/Colors/Selection zone/Alpha"]
script = ExtResource("6_p6jor")
config_property = &"selection_zone_fill_alpha"

[node name="Trigger hitboxes" type="VBoxContainer" parent="Editor/MarginContainer/VBoxContainer/Colors"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
script = ExtResource("8_eb8rq")
label_settings = ExtResource("6_ea76q")

[node name="Color" type="HBoxContainer" parent="Editor/MarginContainer/VBoxContainer/Colors/Trigger hitboxes"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
type = 5
default_color = Color(0, 1, 1, 1)
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="PropertySaveLoad" type="Node" parent="Editor/MarginContainer/VBoxContainer/Colors/Trigger hitboxes/Color"]
script = ExtResource("6_p6jor")
config_property = &"trigger_hitbox_color"

[node name="Alpha" type="HBoxContainer" parent="Editor/MarginContainer/VBoxContainer/Colors/Trigger hitboxes"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
script = ExtResource("11_06nbq")
default_float = 0.2
default_color = Color(0, 1, 0, 1)
metadata/_custom_type_script = "uid://dr8ohqjw3p58t"

[node name="PropertySaveLoad" type="Node" parent="Editor/MarginContainer/VBoxContainer/Colors/Trigger hitboxes/Alpha"]
script = ExtResource("6_p6jor")
config_property = &"trigger_hitbox_fill_alpha"

[connection signal="value_changed" from="Graphics/MarginContainer/VBoxContainer/Window/Window Mode" to="." method="_on_window_mode_value_changed"]
[connection signal="value_changed" from="Audio/MarginContainer/VBoxContainer/Volume/Master" to="." method="_on_game_volume_value_changed"]
[connection signal="value_changed" from="Audio/MarginContainer/VBoxContainer/Volume/Music" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Audio/MarginContainer/VBoxContainer/Volume/Game SFX" to="." method="_on_game_sfx_volume_value_changed"]
[connection signal="value_changed" from="Audio/MarginContainer/VBoxContainer/Volume/Level SFX" to="." method="_on_in_level_sfx_volume_value_changed"]
